# STagSharp

./: .gitignore  README.md  STagSharp.sln
STagGitBuild/: .gitignore  CMakeLists.txt
STagSharp/: STagSharp.cs  STagSharp.csproj
STagSharpExtern/: STagSharpExtern.vcxproj
STagSharpExtern/include/: .gitignore
STagSharpExtern/libs/: .gitignore
STagSharpExtern/src/: StagSharpExtern.cpp  StagSharpExtern.h
STagSharpTest/: Program.cs  STagSharpTest.csproj
STagSharpTest/Properties/: launchSettings.json
